--- a/np-tools/requirements.txt
+++ b/np-tools/requirements.txt
@@ -1,22 +1,61 @@
-dask[dataframe]==2023.4.1
-pybind11==2.11.1
+aniso8601==9.0.1
+attrs==22.2.0
+certifi>=2023.7.22
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.6
+colored==1.4.4
+dask==2023.3.1
+flask==2.2.5
+flask-restx==1.3.0
+fsspec==2023.3.0
+idna==3.4
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+locket==1.0.0
+MarkupSafe==2.1.2
+numpy==1.24.3
+packaging==23.0
+partd==1.3.0
+pyarrow==12.0.0
+pyfiglet==0.8.post1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0
+requests==2.31.0
+scipy==1.10.1
+six==1.16.0
+termcolor==2.2.0
+toolz==0.12.0
+urllib3==1.26.15
+Werkzeug==3.0.0
+zipp==3.15.0
+Cython==0.29.34
+waitress==2.1.2
 gensim==4.3.1
+matplotlib==3.8.2
+sparse-dot-topn
+pybind11==2.11.1
 langdetect==1.0.9
 Levenshtein==0.21.1
 nltk==3.8.1
-pyarrow==12.0.0
 pyenchant==3.2.2
-PyYAML==6.0
 regex==2022.10.31
 scikit_learn==1.2.2
 sentence_transformers==2.2.2
 spacy==3.5.1
 tqdm==4.65.0
 Unidecode==1.3.6
-colorama==0.4.6
-colored==1.4.4
-Flask==2.2.5
-flask-restx==1.3.0
-pyfiglet==0.8.post1
-termcolor==2.2.0
-waitress==2.1.2
+bertopic==0.14.1
+fasttext==0.9.2
+tabulate==0.9.0
+tomotopy==0.12.4
+umap_learn==0.5.3
+sparse-dot-topn~=0.3.1
+rbo==0.1.3
+openai==1.10.0
+pyLDAvis==3.4.1
