--- a/np-tools/requirements.txt
+++ b/np-tools/requirements.txt
@@ -18,7 +18,7 @@ jsonschema==4.17.3
 locket==1.0.0
 MarkupSafe==2.1.2
 numpy==1.24.3
-packaging==23.0
+packaging==24.2
 partd==1.3.0
 pyarrow==12.0.0
 pyfiglet==0.8.post1
@@ -44,10 +44,15 @@ langdetect==1.0.9
 Levenshtein==0.21.1
 nltk==3.8.1
 pyenchant==3.2.2
+pydantic==2.10.6
 regex==2022.10.31
 scikit_learn==1.2.2
+langchain==0.3.17 
+langchain-openai==0.3.4 
+langchain-core==0.3.34 
+langsmith==0.3.6
 sentence_transformers==2.2.2
-spacy==3.5.1
+spacy==3.7.2
 tqdm==4.65.0
 Unidecode==1.3.6
 bertopic==0.14.1
@@ -57,7 +62,12 @@ tomotopy==0.12.4
 umap_learn==0.5.3
 sparse-dot-topn~=0.3.1
 rbo==0.1.3
-openai==1.10.0
+openai==1.61.1
 pyLDAvis==3.4.1
+tiktoken==0.8.0
+tenacity==8.2.2
+requests_toolbelt==1.0.0
+zstandard==0.23.0
+jsonpatch==1.33
 huggingface_hub
 skops
