--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
     volumes:
       - ./data/source:/data/source
       - ./np-config:/config
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
   np-tools:
     build: ./np-tools
@@ -35,6 +42,13 @@ services:
     volumes:
       - ./data/source:/data/source
       - ./np-config:/config
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
   solr-initializer:
     image: alpine
