--- a/np-tools/requirements.txt
+++ b/np-tools/requirements.txt
@@ -1,74 +1,38 @@
-aniso8601==9.0.1
-attrs==22.2.0
-certifi>=2023.7.22
-charset-normalizer==3.1.0
-click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.6
-colored==1.4.4
-dask==2023.3.1
-flask==2.2.5
-flask-restx==1.3.0
-fsspec==2023.3.0
-idna==3.4
-importlib-metadata==6.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-locket==1.0.0
-MarkupSafe==2.1.2
-numpy==1.24.3
-packaging==24.2
-partd==1.3.0
-pyarrow==12.0.0
-pyfiglet==0.8.post1
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==6.0
-requests==2.31.0
-scipy==1.10.1
-six==1.16.0
-termcolor==2.2.0
-toolz==0.12.0
-urllib3==1.26.15
-Werkzeug==3.0.0
-zipp==3.15.0
-Cython==0.29.34
-waitress==2.1.2
-gensim==4.3.1
-matplotlib==3.8.2
-sparse-dot-topn
-pybind11==2.11.1
-langdetect==1.0.9
-Levenshtein==0.21.1
-nltk==3.8.1
-pyenchant==3.2.2
-pydantic==2.10.6
-regex==2022.10.31
-scikit_learn==1.2.2
-langchain==0.3.17 
-langchain-openai==0.3.4 
-langchain-core==0.3.34 
-langsmith==0.3.6
-sentence_transformers==2.2.2
-spacy==3.7.2
-tqdm==4.65.0
-Unidecode==1.3.6
-bertopic==0.14.1
-fasttext==0.9.2
-tabulate==0.9.0
-tomotopy==0.12.4
-umap_learn==0.5.3
-sparse-dot-topn~=0.3.1
-rbo==0.1.3
-openai==1.61.1
+backoff==2.2.1
+#bertopic==0.16.4
+dask==2025.2.0
+fitz==0.0.1.dev2
+Flask==3.1.0
+flask_restx==1.3.0
+fuzzywuzzy==0.18.0
+gensim==4.3.3
+ipdb==0.13.13
+langchain==0.3.20
+langchain_community==0.3.19
+langchain_openai==0.3.8
+language_tool_python==2.9.0
+llama_index==0.12.24
+matplotlib==3.10.1
+numpy
+openai==1.66.3
+pandas==2.2.3
+pdf2image==1.17.0
+pdfminer==20191125
+pdfplumber==0.11.5
+pyfiglet==1.0.2
 pyLDAvis==3.4.1
-tiktoken==0.8.0
-tenacity==8.2.2
-requests_toolbelt==1.0.0
-zstandard==0.23.0
-jsonpatch==1.33
+PyPDF2==3.0.1
 python-dotenv==1.0.1
-huggingface_hub
-skops
+regex==2024.11.6
+Requests==2.32.3
+scikit_learn==1.6.1
+scipy
+sentence_transformers==3.4.1
+skops==0.11.0
+spacy==3.8.4
+sparse_dot_topn==1.1.5
+termcolor==2.5.0
+tomotopy==0.13.0
+tqdm==4.67.1
+#umap==0.1.1
+pyarrow
