--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,34 @@
 {
     "cSpell.words": [
+        "applymap",
         "bhattacharyya",
+        "Blanco",
         "colname",
         "completo",
+        "Djute",
         "embedder",
         "embs",
         "Excepción",
+        "Lemmatization",
         "Lemmatizer",
+        "maxbuffer",
+        "negocio",
         "nptooler",
         "nptools",
         "obtenido",
         "opendata",
         "pyme",
+        "restx",
+        "Saúl",
+        "sblanco",
         "secundaria",
         "setuptools",
         "solicitud",
         "spacy",
         "sproc",
         "Subentity",
+        "subword",
+        "textc",
         "tfidf",
         "trainconfig",
         "xvzf"
