--- a/np-tools/requirements.txt
+++ b/np-tools/requirements.txt
@@ -1,7 +1,6 @@
 backoff==2.2.1
 #bertopic==0.16.4
 dask==2025.2.0
-fitz==0.0.1.dev2
 Flask==3.1.0
 flask_restx==1.3.0
 fuzzywuzzy==0.18.0
@@ -16,7 +15,6 @@ matplotlib==3.10.1
 numpy
 openai==1.66.3
 pandas==2.2.3
-pdf2image==1.17.0
 pdfminer==20191125
 pdfplumber==0.11.5
 pyfiglet==1.0.2
@@ -28,7 +26,6 @@ Requests==2.32.3
 scikit_learn==1.6.1
 scipy
 sentence_transformers==3.4.1
-skops==0.11.0
 spacy==3.8.4
 sparse_dot_topn==1.1.5
 termcolor==2.5.0
@@ -36,3 +33,11 @@ tomotopy==0.13.0
 tqdm==4.67.1
 #umap==0.1.1
 pyarrow
+frontend==0.0.3
+pymupdf
+pdf2image
+skops
+faiss-cpu
+dspy
+bert_score
+ollama
